[project]
name = "mcp-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.24",
    "langchain-groq>=0.3.2",
    "langgraph>=0.3.34",
    "mcp-use>=1.2.7",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
